# xcountry_scanner

./: .gitignore  README.md  changelog.txt  devbox.json  pyproject.toml
backend/: .gitignore  db.sqlite3
backend/account/: urls.py  views.py
backend/account/templates/account/: index.html  layout.html  login.html  login_success.html  logout.html  logout_success.html  profile.html  signup.html
backend/api/: models.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_remove_event_results.py
backend/backend/: settings.py  urls.py
backend/main/: urls.py  views.py
backend/main/static/main/: index.html
backend/main/static/main/assets/: CreateEvent-DhEGHpYd.js  DialogContent-BfQMg26K.js  ViewEvent-BDgzjMXA.js  index-C9L_a09z.js  index-DE8kJOD8.js  index-DdM4Xncm.js
backend/main/templates/main/: backoffice.html  index.html
backend/results/: 1.json
backend/static/: staticfiles.json
backend/static/main/: index.4eadc0b08917.html  index.9e9e4b5f1714.html  index.html
backend/static/main/assets/: index-3Ag-xxCo.ac08e974cfe6.js  index-DJwOPI_3.js
backend/testlist/: urls.py  views.py
backend/testlist/jinja_templates/: list.html  single.html
backend/testlist/templates/testlist/: column_mapping.html  index.html
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  router.tsx  types.ts  utils.ts
frontend/src/pages/: CreateEvent.tsx  HomePage.tsx  RecordResults.tsx  ViewEvent.tsx
scripts/: startserver.py
